--- a/css/layout.css
+++ b/css/layout.css
@@ -43,9 +43,9 @@
     min-height: 88vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding-top: 0;
+    padding-top: 24vh;
     padding-bottom: 60px;
     position: relative;
     text-align: center;
